--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     docker:
       - image: circleci/golang:1.12.5
     steps:
+      - checkout
       - run:
           name: Compile
           command: go build
