--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,18 +6,18 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Compile
+          name: Compile Packages and Dependencies
           command: go build
       - run:
-          name: Tests
+          name: Unit Tests
           command: go test ./... -coverprofile=coverage.txt -covermode=count || bash <(curl -s https://codecov.io/bash)
       - run:
-          name: Code Quality
-          command:
+          name: Code Quality Analysis
+          command: |
             curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | bash -s -- -b $GOPATH/bin v1.12.5
             golangci-lint run
       - run:
-          name: Release
+          name: Release Binaries
           command: |
             if [ "$CIRCLE_TAG" ]; then
               curl -sL https://git.io/goreleaser | bash
